Fixed 'uses' instead of 'run' for checkout action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: go version
 
       - name: Check out code
-        run: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Install go-migrate
         run: |
