--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,15 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
         with:
           mask-password: 'true'
+      
+      - name: Create .env file
+        run: |
+          touch config.env
+          echo DB_SOURCE=${{ secrets.DB_SOURCE }} >> config.env
+          echo DB_DRIVER=${{ secrets.DB_DRIVER }} >> config.env
+          echo TOKEN_SYMMETRIC_KEY=${{ secrets.TOKEN_SYMMETRIC_KEY }} >> config.env
+          echo ACCESS_TOKEN_DURATION=${{ secrets.ACCESS_TOKEN_DURATION }} >> config.env
+          echo SERVER_ADDRESS=${{ secrets.SERVER_ADDRESS }} >> config.env
 
       - name: Build, tag, and push image to AWS ECR
         env:
