Updated kubectl install to latest

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: '1.29.2'
+          version: latest
         id: install
 
       - name: Configure AWS credentials
